# cryptonotewallet

./: .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake  LipCoinWallet.cmake
src/: CurrencyAdapter.cpp
